public/assets/css/styles.css
html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

.save-note, 
.clear-form, 
.new-note {
  display: none;
  cursor: pointer;
}

.icons i {
  margin-right: 5px;
}


.note-textarea,
.note-title {
  color: #000000;
  width: 100%;
  outline: none;
  border: none;
}

.note-textarea {
  resize: none;
  height: calc(100% - 63px);
  padding-top: 15px;
}

.note-title {
  height: 50px;
  margin-top: 13px;
  font-size: 3rem;
}

.note-title:read-only,
.note-textarea:read-only {
  color: #757575;
}

.list-container .card {
  height: calc(100vh - 70px);
  border-bottom: none;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.list-container {
  padding-left: 0;
}

.list-container .list-group,
.list-container .list-group-item:first-child,
.list-container .card {
  border-top: none;
  border-top-right-radius: 0;
  border-top-left-radius: 0;
}

.list-item-title {
  display: inline-block;
  width: 75%;
}

.list-container i {
  font-size: 1.1rem;
  cursor: pointer;
}

.list-container .list-group-item {
  border-left: none;
  border-right: none;
  padding: 20px;
  cursor: pointer;
}

